--- a/tests/dummy/app/styles/components/main-footer.scss
+++ b/tests/dummy/app/styles/components/main-footer.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.contribute-call-to-action a {
+body .contribute-call-to-action a {
   border-radius: 4px;
   padding: 5px 10px;
   text-align: center;
